Implemented edit_password action

--- a/ShallWeEat/app/views/account/edit.html.erb
+++ b/ShallWeEat/app/views/account/edit.html.erb
@@ -24,7 +24,7 @@
 			Confirm new password<br>
 			<input type="password" id="input_pass_confirm"/>
 		</p>
-		<button>Update password</button>
+		<button id="button_change_password" >Update password</button>
 	</div>
 
 </div>
