change_profile view... don't have idea how to make birth selection form

--- a/ShallWeEat/app/views/account/edit.html.erb
+++ b/ShallWeEat/app/views/account/edit.html.erb
@@ -3,11 +3,19 @@
 <div>
 	<div>
 		<h2>Change profile</h2>
-		Gender<br>
-		<input type="radio">male
-		<input type="radio">female<br>
-		Birthday<br>
-		Not yet implemented
+		<p>
+			Email<br>
+			<input type="text">
+		</p>
+		<p>
+			Gender<br>
+			<input type="radio">male
+			<input type="radio">female
+		</p>
+		<p>
+			Birthday<br>
+			Not yet implemented
+		</p>
 		<button>Update profile</button>
 	</div>
 	<div>
