--- a/ShallWeEat/app/views/accounts/signup.html.erb
+++ b/ShallWeEat/app/views/accounts/signup.html.erb
@@ -2,6 +2,9 @@
 <div class="row">
 	<%= form_for(@account) do |f| %>
 		<p>
+		<%= render 'shared/error_messages' %>
+		</p>
+		<p>
 			<%= f.label :nickname %>
 			<%= f.text_field :name, class: 'form-control' %>
 		</p>
