--- a/ShallWeEat/app/views/accounts/signup.html.erb
+++ b/ShallWeEat/app/views/accounts/signup.html.erb
@@ -25,7 +25,7 @@
 		</p>
 		<p>
 			<%= f.label :birth %>
-			<%= f.date_select :birth %>
+			<%= f.date_select :birth, start_year: 1950%>
 		</p>
 			<%= f.submit "Create my account!", class: "btn btn-primart" %>
 		
