--- a/ShallWeEat/app/views/layouts/application.html.erb
+++ b/ShallWeEat/app/views/layouts/application.html.erb
@@ -6,9 +6,9 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="<%= controller_name %> <%= action_name %>">
 
-<%= yield %>
+	<%= yield %>
 
 </body>
 </html>
