--- a/ShallWeEat/app/views/accounts/signup.html.erb
+++ b/ShallWeEat/app/views/accounts/signup.html.erb
@@ -1,6 +1,6 @@
 <h1>Sign up!</h1>
 <div class="row">
-	<%= form_for(@account) do |f| %>
+	<%= form_for(@account, remote: true) do |f| %>
 		<p>
 		<%= render 'shared/error_messages' %>
 		</p>
