Made logout button

--- a/ShallWeEat/app/views/accounts/show.html.erb
+++ b/ShallWeEat/app/views/accounts/show.html.erb
@@ -1,8 +1,8 @@
 <h1> Welcome to join us!</h1>
+<%= button_to 'I wanna log out!', :accounts_logout, :method => 'get' %>
 <p>Your name is
 	<%= @account.name  %>
 </p>
-	
 
 <p>Your password is
 	<%= @account.pass  %>
