Added logout button to edit view

--- a/ShallWeEat/app/views/accounts/edit.html.erb
+++ b/ShallWeEat/app/views/accounts/edit.html.erb
@@ -1,5 +1,7 @@
 <h1>Account Settings</h1>
 
+<%= button_to 'I want to log out~~', :accounts_logout, :method => 'get' %>
+
 <div>
 	<div>
 		<h2>Change profile</h2>
