--- a/ShallWeEat/app/views/accounts/signup.html.erb
+++ b/ShallWeEat/app/views/accounts/signup.html.erb
@@ -1,8 +1,7 @@
 <h1>Sign up!</h1>
 <div class="row">
 	<%= form_for(@account, remote: true) do |f| %>
-		<p>
-		<%= render 'shared/error_messages' %>
+		<p id="error_msg_box">
 		</p>
 		<p>
 			<%= f.label :nickname %>
