--- a/ShallWeEat/app/views/accounts/signup.html.erb
+++ b/ShallWeEat/app/views/accounts/signup.html.erb
@@ -9,7 +9,7 @@
 		</p>
 		<p>
 			<%= f.label :password %>
-			<%= f.text_field :pass, class: 'form-control' %>
+			<%= f.password_field :pass, class: 'form-control' %>
 		</p>
 		<p>
 			<%= f.label :email_address %>
