create partial form menu and rendered by food_result and questions view

--- a/ShallWeEat/app/views/suggestions/food_result.html.erb
+++ b/ShallWeEat/app/views/suggestions/food_result.html.erb
@@ -1,6 +1,8 @@
+<%= render "menu" %>
+
 <div id="Food_info">
 		<header>
-			<p id = "food_name"></p>
+			<p id = "food_name">Food name</p>
 		</header>
 		<div>
 			<aside>
@@ -9,10 +11,10 @@
 				
 		<section>
 			<header>
-				<img src="" id = "food_image">
+				<img src="" id = "food_image">image here</img>
 			</header>
 			<article>
-				<p id = "description"></p>
+				<p id = "description">Description</p>
 			</article>
 		</section>
 			<aside>
