--- a/ShallWeEat/app/views/suggestions/_menu.html.erb
+++ b/ShallWeEat/app/views/suggestions/_menu.html.erb
@@ -1,7 +1,6 @@
 <nav>
 	<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Help</a></li>
+		<li><a href = "#">Profile setting</a></li>
+		<li><a href = "#">Logout</a></li>
 	</ul>
 </nav>
