--- a/ShallWeEat/app/views/suggestions/questions.html.erb
+++ b/ShallWeEat/app/views/suggestions/questions.html.erb
@@ -3,13 +3,17 @@
 <p id = "text_question"></p>
 
 <div class="pagination">
+						<img src = "" id = "bad_image"></button>
             <ul>
-              <li class="previous"><a href="#previous" class="fui-arrow-left"></a></li>
-              <li><a href="#fakelink">1</a></li>
-              <li><a href="#fakelink">2</a></li>
-              <li><a href="#fakelink">3</a></li>
-              <li><a href="#fakelink">4</a></li>
-              <li class="next"><a href="#fakelink" class="fui-arrow-right"></a></li>
+              <li><a id="button_1" href="#">1</a></li>
+              <li><a id="button_2" href="#">2</a></li>
+              <li><a id="button_3" href="#">3</a></li>
+              <li><a id="button_4" href="#">4</a></li>
+              <li><a id="button_5" href="#">5</a></li>
             </ul>
+						<img src = "" id = "good_image"></button>
 </div>
+
+<br>
+<button id = "button_back">Back!</button>
 
