--- a/ShallWeEat/app/views/suggestions/questions.html.erb
+++ b/ShallWeEat/app/views/suggestions/questions.html.erb
@@ -3,7 +3,7 @@
 <p id = "text_question"></p>
 
 <div class="pagination">
-						<img src = "" id = "bad_image"></button>
+						<img src = "/assets/Thumbs_down_icon.png" id = "bad_image"></button>
             <ul>
               <li><a id="button_1" href="#">1</a></li>
               <li><a id="button_2" href="#">2</a></li>
@@ -11,7 +11,7 @@
               <li><a id="button_4" href="#">4</a></li>
               <li><a id="button_5" href="#">5</a></li>
             </ul>
-						<img src = "" id = "good_image"></button>
+						<img src = "/assets/Thumbs_up_icon.png" id = "good_image"></button>
 </div>
 
 <br>
