--- a/ShallWeEat/app/views/suggestions/questions.html.erb
+++ b/ShallWeEat/app/views/suggestions/questions.html.erb
@@ -5,11 +5,11 @@
 <div class="pagination">
 						<img src = "" id = "bad_image"></button>
             <ul>
-              <li><a id="button_1" href="#">1</a></li>
-              <li><a id="button_2" href="#">2</a></li>
-              <li><a id="button_3" href="#">3</a></li>
-              <li><a id="button_4" href="#">4</a></li>
-              <li><a id="button_5" href="#">5</a></li>
+							<li><a id="button_1" >1</a></li>
+              <li><a id="button_2" >2</a></li>
+              <li><a id="button_3" >3</a></li>
+              <li><a id="button_4" >4</a></li>
+              <li><a id="button_5" >5</a></li>
             </ul>
 						<img src = "" id = "good_image"></button>
 </div>
