apply bootstrap to food_result and questions view

--- a/ShallWeEat/app/views/suggestions/_menu.html.erb
+++ b/ShallWeEat/app/views/suggestions/_menu.html.erb
@@ -1,6 +1,7 @@
-<nav>
-	<ul>
-		<li><a href = "#">Profile setting</a></li>
-		<li><a href = "#">Logout</a></li>
-	</ul>
+<nav class = "navbar navbar-inverse"\>
+	<div class="container">
+		<a class = "navbar-brand" href = "#first_page">ShallWeEat</a>
+		<a class = "navbar-brand navbar-right" href = "#">Profile setting</a>
+		<a class = "navbar-brand navbar-right" href = "#">Logout</a>
+	</div>
 </nav>
