--- a/ShallWeEat/app/views/suggestions/food_result.html.erb
+++ b/ShallWeEat/app/views/suggestions/food_result.html.erb
@@ -1,24 +1,23 @@
 <%= render "menu" %>
 
-<div id="Food_info">
-		<header>
-			<p id = "food_name">Food name</p>
-		</header>
-		<div>
-			<aside>
-				<button id = "bad">Bad</button>
-			</aside>
-				
-		<section>
-			<header>
-				<img src="" id = "food_image">image here</img>
-			</header>
-			<article>
-				<p id = "description">Description</p>
-			</article>
-		</section>
-			<aside>
-				<button id = "good">Good</button>
-			</aside>				
+<div id="page" class="hfeed">
+<div class = "container">
+	<div id class = "row">
+		<div id = "left_layout" class = "span3" role = "comlementary">
+			<img src = "/assets/bad_image.png" alt = "bad" id = "bad" height = "42" width = "42">
+
 		</div>
+	
+	
+		<div id = "main" class = "span6" role = "main">
+			<p id = "food_name">Food name</p>
+			<p id = "description">Description</p>
+
+		</div>
+
+		<div id = "right_layout" class = "span3" role = "complementary">
+		<img src = "/assets/good_image.png" alt = "good" id = "good" height = "42" width = "42">
+		</div>
+	</div>
+</div>
 </div>
