--- a/ShallWeEat/app/views/suggestions/questions.html.erb
+++ b/ShallWeEat/app/views/suggestions/questions.html.erb
@@ -1,17 +1,20 @@
-<%= render "menu" %>
+<= render "menu" %>
 
-<p id = "text_question"></p>
 
-<div class="pagination">
-						<img src = "" id = "bad_image"></button>
-            <ul>
-              <li><a id="button_1" href="#">1</a></li>
-              <li><a id="button_2" href="#">2</a></li>
-              <li><a id="button_3" href="#">3</a></li>
-              <li><a id="button_4" href="#">4</a></li>
-              <li><a id="button_5" href="#">5</a></li>
-            </ul>
-						<img src = "" id = "good_image"></button>
+<div class="container">
+	<div class="page-header">
+		<p class = "breadcrumb" id = "text_question">sd</p>
+	</div>
+
+			<img src = "" id = "bad_image"> 
+			<ul class = "list-group">
+     		<a class = "list-group-item list-group-item-success" id="button_1" href="#">1</a>
+      	<a class = "list-group-item list-group-item-info" id="button_2" href="#">2</a>
+      	<a class = "list-group-item  list-group-item-warning" id="button_3" href="#">3</a>
+      	<a class = "list-group-item list-group-item-success" id="button_4" href="#">4</a>
+      	<a class = "list-group-item list-group-item-info" id="button_5" href="#">5</a>
+      </ul>
+			<img src = "" id = "good_image">
 </div>
 
 <br>
