--- a/ShallWeEat/app/views/accounts/index.html.erb
+++ b/ShallWeEat/app/views/accounts/index.html.erb
@@ -1,16 +1,25 @@
+<%= render "suggestions/menu" %>
+
 <% if logged_in? %>
   <p>Hi, <%= current_account.name %>!</p>
     <%= link_to signup_path  %>
 
   
 <% else %>
-  <label for="name_input">Name / Email</label><br>
-  <input id="name_input"><br><br>
-  
-  <label for="pass_input">Password</label><br>
-  <input id="pass_input" type="password"><br><br>
-  
-  <button id="login_btn">Login</button>
-  <button id="signup_btn">Sign Up</button>
-  
+	<div class = "container">
+		<div class = "row">
+			<div class = "col-md-6 col-md-offset-3">
+				<div class = "form-group">
+					<label for="name_input">Name / Email</label><br>
+					<input id="name_input" class = "form-control" placeholder = "Enter Name/Email" ><br><br>
+					
+					<label for="pass_input">Password</label><br>
+					<input id="pass_input" class = "form-control" placeholder = "Enter Password" type="password"><br><br>
+					
+					<button id="login_btn" class = "btn btn-primary">Login</button>
+					<button id="signup_btn" class = "btn btn-primary">Sign Up</button>
+				</div>
+			</div>
+		</div>
+	</div>
 <% end %>
