--- a/ShallWeEat/app/views/suggestions/food_result.html.erb
+++ b/ShallWeEat/app/views/suggestions/food_result.html.erb
@@ -3,20 +3,20 @@
 <div id="page" class="hfeed">
 <div class = "container">
 	<div id class = "row">
-		<div id = "left_layout" class = "span3" role = "comlementary">
-			<img src = "/assets/bad_image.png" alt = "bad" id = "bad" height = "42" width = "42">
-
+		<div id = "left_layout" class = "col-md-3" role = "comlementary">
+				<img src = "/assets/bad_image.png" class = "center-block" alt = "bad" id = "bad" height = "70%" width = "70%">
 		</div>
 	
 	
-		<div id = "main" class = "span6" role = "main">
-			<p id = "food_name">Food name</p>
-			<p id = "description">Description</p>
-
+		<div id = "main" class = "col-md-6" role = "main">
+			<div class = "text-center">
+				<p id = "food_name">Food name</p>
+				<p id = "description">Description</p>
+			</div>
 		</div>
 
-		<div id = "right_layout" class = "span3" role = "complementary">
-		<img src = "/assets/good_image.png" alt = "good" id = "good" height = "42" width = "42">
+		<div id = "right_layout" class = "col-md-3" role = "complementary">
+		<img src = "/assets/good_image.png" class = "center-block" alt = "good" id = "good" height = "70%" width = "70%">
 		</div>
 	</div>
 </div>
