--- a/ShallWeEat/app/views/suggestions/questions.html.erb
+++ b/ShallWeEat/app/views/suggestions/questions.html.erb
@@ -1,22 +1,26 @@
-<= render "menu" %>
+<%= render "menu" %>
 
 
 <div class="container">
 	<div class="page-header">
 		<p class = "breadcrumb" id = "text_question">sd</p>
 	</div>
-
-			<img src = "" id = "bad_image"> 
-			<ul class = "list-group">
-     		<a class = "list-group-item list-group-item-success" id="button_1" href="#">1</a>
-      	<a class = "list-group-item list-group-item-info" id="button_2" href="#">2</a>
-      	<a class = "list-group-item  list-group-item-warning" id="button_3" href="#">3</a>
-      	<a class = "list-group-item list-group-item-success" id="button_4" href="#">4</a>
-      	<a class = "list-group-item list-group-item-info" id="button_5" href="#">5</a>
-      </ul>
-			<img src = "" id = "good_image">
+</div>
+<div class = "container">
+	<div class = "row">
+		<div id = "questions_main" class = "col-md-6 col-md-offset-3">
+			<div class = "pagination pagination-lg">
+				<ul>
+					<li><font sizes = "100x100"><a id="button_1" href="#">1</a></font><li>
+					<li><a id="button_2" href="#">2</a><li>
+					<li><a id="button_3" href="#">3</a><li>
+					<li><a id="button_4" href="#">4</a><li>
+					<li><a id="button_5" href="#">5</a><li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<button id = "button_back" class = "btn btn-primary">Back!</button>
 </div>
 
-<br>
-<button id = "button_back">Back!</button>
 
