--- a/ShallWeEat/app/views/accounts/index.html.erb
+++ b/ShallWeEat/app/views/accounts/index.html.erb
@@ -9,15 +9,17 @@
 	<div class = "container">
 		<div class = "row">
 			<div class = "col-md-6 col-md-offset-3">
-				<div class = "form-group">
-					<label for="name_input">Name / Email</label><br>
-					<input id="name_input" class = "form-control" placeholder = "Enter Name/Email" ><br><br>
+				<div class = "margin_top_100px">
+					<div class = "form-group">
+						<label for="name_input">Name / Email</label><br>
+						<input id="name_input" class = "form-control" placeholder = "Enter Name/Email" ><br><br>
 					
-					<label for="pass_input">Password</label><br>
-					<input id="pass_input" class = "form-control" placeholder = "Enter Password" type="password"><br><br>
+						<label for="pass_input">Password</label><br>
+						<input id="pass_input" class = "form-control" placeholder = "Enter Password" type="password"><br><br>
 					
-					<button id="login_btn" class = "btn btn-primary">Login</button>
-					<button id="signup_btn" class = "btn btn-primary">Sign Up</button>
+						<button id="login_btn" class = "btn btn-success btn-lg">Login</button>
+						<button id="signup_btn" class = "btn btn-success btn-lg">Sign Up</button>
+					</div>
 				</div>
 			</div>
 		</div>
