--- a/ShallWeEat/app/assets/stylesheets/suggestions.scss
+++ b/ShallWeEat/app/assets/stylesheets/suggestions.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Suggestions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.pagination{
+	width: 1000px;
+	height: 200px;
+
+}
+
+.pagination li > a{
+	min-width: 80px;
+	min-height: 80px;
+	font-size: 30px;
+	padding: 30px;
+}
