integrate views in suggestions

--- a/ShallWeEat/app/views/suggestions/_food_result.html.erb
+++ b/ShallWeEat/app/views/suggestions/_food_result.html.erb
@@ -1,10 +1,7 @@
-<%= render "menu" %>
-
-<div id="page" class="hfeed">
-<div class = "container">
+<div id = "food_result_view" class = "container">
 	<div id class = "row">
 		<div id = "left_layout" class = "col-md-3" role = "comlementary">
-				<img src = "/assets/bad_image.png" class = "center-block" alt = "bad" id = "bad" height = "70%" width = "70%">
+				<img src = "/assets/Thumbs_down_icon.png" class = "center-block" alt = "bad" id = "bad" height = "70%" width = "70%">
 		</div>
 	
 	
@@ -16,8 +13,7 @@
 		</div>
 
 		<div id = "right_layout" class = "col-md-3" role = "complementary">
-		<img src = "/assets/good_image.png" class = "center-block" alt = "good" id = "good" height = "70%" width = "70%">
+		<img src = "/assets/Thumbs_up_icon.png" class = "center-block" alt = "good" id = "good" height = "70%" width = "70%">
 		</div>
 	</div>
-</div>
 </div>
