--- a/ShallWeEat/app/views/suggestions/questions.html.erb
+++ b/ShallWeEat/app/views/suggestions/questions.html.erb
@@ -1,34 +1,5 @@
 <%= render "menu" %>
 
+<%= render "question" %>
 
-<div class="container">
-	<div class="col-md-6 col-md-offset-3">
-		<div class="margin_top_100px">
-			<p class = "breadcrumb" id = "text_question">sd</p>
-		</div>
-	</div>
-</div>
-
-<div class = "container">
-	<div class = "row">
-		<div id = "questions_main" class = "col-md-4 col-md-offset-4">
-			<div class = "margin_top_100px">
-				<div class = "pagination">
-					<ul>
-						<li><a id="button_1" href="#">1</a><li>
-						<li><a id="button_2" href="#">2</a><li>
-						<li><a id="button_3" href="#">3</a><li>
-						<li><a id="button_4" href="#">4</a><li>
-						<li><a id="button_5" href="#">5</a><li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div>
-		<button id = "button_back" class = "btn btn-warning btn-lg">Back!</button>
-	</div>
-</div>
-
-
+<%= render "food_result" %>
