--- a/ShallWeEat/app/views/suggestions/_food_result.html.erb
+++ b/ShallWeEat/app/views/suggestions/_food_result.html.erb
@@ -8,7 +8,8 @@
 		<div id = "main" class = "col-md-6" role = "main">
 			<div class = "text-center">
 				<p id = "food_name">Food name</p>
-				<p id = "description">Description</p>
+				<p id = "food_desc">Description</p>
+				<img id = "food_img" class = "center-block">
 			</div>
 		</div>
 
