--- a/ShallWeEat/app/views/suggestions/_food_result.html.erb
+++ b/ShallWeEat/app/views/suggestions/_food_result.html.erb
@@ -1,7 +1,7 @@
 <div id = "food_result_view" class = "container">
 	<div id class = "row">
 		<div id = "left_layout" class = "col-md-3" role = "comlementary">
-				<img src = "/assets/Thumbs_down_icon.png" class = "center-block" alt = "bad" id = "bad" height = "70%" width = "70%">
+				<img src = "/assets/Thumbs_down_icon.png" class = "center-block" alt = "bad" id = "button_bad" height = "70%" width = "70%">
 		</div>
 	
 	
@@ -14,7 +14,7 @@
 		</div>
 
 		<div id = "right_layout" class = "col-md-3" role = "complementary">
-		<img src = "/assets/Thumbs_up_icon.png" class = "center-block" alt = "good" id = "good" height = "70%" width = "70%">
+		<img src = "/assets/Thumbs_up_icon.png" class = "center-block" alt = "good" id = "button_good" height = "70%" width = "70%">
 		</div>
 	</div>
 </div>
