--- a/ShallWeEat/app/views/suggestions/_food_result.html.erb
+++ b/ShallWeEat/app/views/suggestions/_food_result.html.erb
@@ -17,4 +17,6 @@
 		<img src = "/assets/Thumbs_up_icon.png" class = "center-block" alt = "good" id = "button_good" height = "70%" width = "70%">
 		</div>
 	</div>
+
+	<div id = "map"></div>
 </div>
