--- a/ShallWeEat/app/views/suggestions/_question.html.erb
+++ b/ShallWeEat/app/views/suggestions/_question.html.erb
@@ -2,7 +2,12 @@
 	<div class="container">
 		<div class="col-md-6 col-md-offset-3">
 			<div class="margin_top_100px">
-				<p class = "breadcrumb" id = "text_question">sd</p>
+				<div class="panel panel-primary">
+  				<div class="panel-body animated bounceInRight">				
+						<center><h2 id = "text_question"></h2></center>
+				  </div>
+				</div>	
+				
 			</div>
 		</div>
 	</div>
@@ -12,18 +17,17 @@
 			<div id = "questions_main" class = "col-md-4 col-md-offset-4">
 				<div class = "margin_top_100px">
 					<div class = "pagination">
-							<li><a id="button_1" href="#">1</a><li>
-							<li><a id="button_2" href="#">2</a><li>
-							<li><a id="button_3" href="#">3</a><li>
-							<li><a id="button_4" href="#">4</a><li>
-							<li><a id="button_5" href="#">5</a><li>
+							<li><a id="button_1" href="#" style = "color:#000000; background:#0000FF"  class = "animated infinite very_slow shake"><h2><center>0</center></h2></a><li>
+							<li><a id="button_2" href="#" style = "color:#000000; background:#4040FF" class = "animated infinite normal pulse"><h2><center>1</center></h2></a><li>
+							<li><a id="button_3" href="#" style = "color:#000000; background:#7070FF" class = "animated infinite normal pulse"><h2><center>2</center></h2></a><li>
+							<li><a id="button_4" href="#" style = "color:#000000; background:#E8E8FF" class = "animated infinite normal pulse"><h2><center>3</center></h2></a><li>
+							<li><a id="button_5" href="#" style = "color:#000000; background:#FFFFFF" class = "animated infinite fast bounce"><h2><center>4</center></h2></a><li>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div>
-			<button id = "button_back" class = "btn btn-warning btn-lg">Back!</button>
-		</div>
+		<button id = "button_back" class = "btn btn-warning btn-lg">Back!</button>
+		<div class="margin_top_100px"></div>
 	</div>
 </div>
 
