--- a/ShallWeEat/app/views/suggestions/questions.html.erb
+++ b/ShallWeEat/app/views/suggestions/questions.html.erb
@@ -1,5 +1,52 @@
-<%= render "menu" %>
+	<!-- Carousel -->
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+	<!-- Indicators -->
+	<ol class="carousel-indicators">
+		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+		<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+		<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+	</ol>
 
-<%= render "question" %>
+	<!-- Wrapper for slides -->
+	<div class="carousel-inner">
+		<div class="item active">
+			<img src="/assets/bg_01.jpg" alt="" />
+			<div class="container">
+				<%= render "menu" %>
 
-<%= render "food_result" %>
+				<%= render "question" %>
+
+				<%= render "food_result" %>
+	<!-- This is a typical Twitter Bootstrap Carousel -->
+				<div class="carousel-caption">
+					<h1>Bootstrap Carousel Fullscreen</h1>
+					<p class="lead">Just turns the Twitter Bootstrap Carousel in fullscreen mode, and scale to fit the screen resolution</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="item">
+			<img src="/assets/bg_02.jpg" alt="" />
+			<div class="container">
+				<%= render "menu" %>
+
+				<%= render "question" %>
+
+				<%= render "food_result" %>
+				<div class="carousel-caption">
+					<h1>Bootstrap Carousel Fullscreen</h1>
+					<p class="lead">Just turns the Twitter Bootstrap Carousel in fullscreen mode, and scale to fit the screen resolution</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Controls -->
+	<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+		<span class="glyphicon glyphicon-chevron-left"></span>
+	</a>
+	<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+		<span class="glyphicon glyphicon-chevron-right"></span>
+	</a>
+</div>
+
