fixed questions view little bit

--- a/ShallWeEat/app/views/suggestions/questions.html.erb
+++ b/ShallWeEat/app/views/suggestions/questions.html.erb
@@ -11,14 +11,14 @@
 	<div class="carousel-inner">
 		<div class="item active">
 			<img src="/assets/bg_01.jpg" alt="" />
-			<div class="container">
+			<div class="container" style= "position: fixed">
+				<div class="carousel-caption">
 				<%= render "menu" %>
 
 				<%= render "question" %>
 
 				<%= render "food_result" %>
 	<!-- This is a typical Twitter Bootstrap Carousel -->
-				<div class="carousel-caption">
 					<h1>Bootstrap Carousel Fullscreen</h1>
 					<p class="lead">Just turns the Twitter Bootstrap Carousel in fullscreen mode, and scale to fit the screen resolution</p>
 				</div>
@@ -28,12 +28,13 @@
 		<div class="item">
 			<img src="/assets/bg_02.jpg" alt="" />
 			<div class="container">
+				<div class="carousel-caption">
 				<%= render "menu" %>
 
 				<%= render "question" %>
 
 				<%= render "food_result" %>
-				<div class="carousel-caption">
+	<!-- This is a typical Twitter Bootstrap Carousel -->
 					<h1>Bootstrap Carousel Fullscreen</h1>
 					<p class="lead">Just turns the Twitter Bootstrap Carousel in fullscreen mode, and scale to fit the screen resolution</p>
 				</div>
