--- a/ShallWeEat/app/assets/stylesheets/suggestions.scss
+++ b/ShallWeEat/app/assets/stylesheets/suggestions.scss
@@ -5,7 +5,6 @@
 .pagination{
 	width: 1000px;
 	height: 200px;
-
 }
 
 .pagination li > a{
@@ -14,3 +13,16 @@
 	font-size: 30px;
 	padding: 30px;
 }
+
+.glass_box {
+	position: relative;
+	z-index: 100;
+	overflow: hidden;
+	background-color: rgba(100, 100, 100, 0.5);
+}
+
+.item {
+	-webkit-filter: blur(8px);
+	filter: blur(8px);
+}
+
