--- a/ShallWeEat/app/views/suggestions/_question.html.erb
+++ b/ShallWeEat/app/views/suggestions/_question.html.erb
@@ -1,4 +1,4 @@
-<div id = "question_view">
+<div id = "question_view" class="glass_box">
 	<div class="container">
 		<div class="col-md-6 col-md-offset-3">
 			<div class="margin_top_100px">
