--- a/ShallWeEat/app/views/suggestions/questions.html.erb
+++ b/ShallWeEat/app/views/suggestions/questions.html.erb
@@ -1,38 +1,6 @@
-	<!-- Carousel -->
-<div id="carousel-example-generic" class="carousel slide" style="position: absolute" data-ride="carousel">
-	<!-- Indicators -->
-	<ol class="carousel-indicators">
-		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-		<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-		<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-	</ol>
-
-	<!-- Wrapper for slides -->
-	<div class="carousel-inner">
-		<div class="item active">
-			<img src="/assets/bg_01.jpg" alt="" />
-			<div class="container">
-				<div class="carousel-caption">
-	<!-- This is a typical Twitter Bootstrap Carousel -->
-				</div>
-			</div>
-		</div>
-
-		<div class="item">
-			<img src="/assets/bg_02.jpg" alt="" />
-			<div class="container">
-				<div class="carousel-caption">
-	<!-- This is a typical Twitter Bootstrap Carousel -->
-				</div>
-			</div>
-		</div>
-	</div>
-
-</div>
-
+<%= render "background" %>
 <%= render "menu" %>
-
+<div class="blur"></div>
 <%= render "question" %>
-
 <%= render "food_result" %>
 
