--- a/ShallWeEat/app/assets/stylesheets/suggestions.scss
+++ b/ShallWeEat/app/assets/stylesheets/suggestions.scss
@@ -16,13 +16,18 @@
 
 .glass_box {
 	position: relative;
+	display: table;
 	z-index: 100;
 	overflow: hidden;
-	background-color: rgba(100, 100, 100, 0.5);
+	background-color: rgba(255, 255, 255, 0.35);
+	border-radius: 20px;
+	margin-top: 100px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .item {
-	-webkit-filter: blur(8px);
-	filter: blur(8px);
+	-webkit-filter: blur(10px);
+	filter: blur(10px);
 }
 
