--- a/ShallWeEat/app/views/suggestions/_menu.html.erb
+++ b/ShallWeEat/app/views/suggestions/_menu.html.erb
@@ -1,4 +1,4 @@
-<nav class = "navbar navbar-inverse" style="z-index: 99; margin-bottom: 0px"\>
+<nav class = "navbar navbar-inverse" style="z-index: 99; margin-bottom: 0px; border-radius: 0px;"\>
 	<div class="container">
 		<a class = "navbar-brand" href = "#first_page">ShallWeEat</a>
 		<a class = "navbar-brand navbar-right" href = "#">Profile setting</a>
