--- a/ShallWeEat/app/views/suggestions/_question.html.erb
+++ b/ShallWeEat/app/views/suggestions/_question.html.erb
@@ -1,33 +1,38 @@
-<div id = "question_view" class="glass_box">
-	<div class="container">
-		<div class="col-md-6 col-md-offset-3">
-			<div class="margin_top_100px">
-				<div class="panel panel-primary">
-  				<div class="panel-body animated bounceInRight">				
-						<center><h2 id = "text_question"></h2></center>
-				  </div>
-				</div>	
-				
-			</div>
-		</div>
-	</div>
+<div id = "question_view">
+	<%= render "background" %>
 
-	<div class = "container">
-		<div class = "row">
-			<div id = "questions_main" class = "col-md-4 col-md-offset-4">
-				<div class = "margin_top_100px">
-					<div class = "pagination">
-							<li><a id="button_1" href="#" style = "color:#000000; background:#0000FF"  class = "animated infinite very_slow shake"><h2><center>0</center></h2></a><li>
-							<li><a id="button_2" href="#" style = "color:#000000; background:#4040FF" class = "animated infinite normal pulse"><h2><center>1</center></h2></a><li>
-							<li><a id="button_3" href="#" style = "color:#000000; background:#7070FF" class = "animated infinite normal pulse"><h2><center>2</center></h2></a><li>
-							<li><a id="button_4" href="#" style = "color:#000000; background:#E8E8FF" class = "animated infinite normal pulse"><h2><center>3</center></h2></a><li>
-							<li><a id="button_5" href="#" style = "color:#000000; background:#FFFFFF" class = "animated infinite fast bounce"><h2><center>4</center></h2></a><li>
-					</div>
+	<div class="glass_box">
+		<div class="container">
+			<div class="col-md-6 col-md-offset-3">
+				<div class="margin_top_100px">
+					<div class="panel panel-primary">
+						<div class="panel-body animated bounceInRight">				
+							<center><h2 id = "text_question"></h2></center>
+						</div>
+					</div>	
+					
 				</div>
 			</div>
 		</div>
-		<button id = "button_back" class = "btn btn-warning btn-lg">Back!</button>
-		<div class="margin_top_100px"></div>
+
+		<div class = "container">
+			<div class = "row">
+				<div id = "questions_main" class = "col-md-4 col-md-offset-4">
+					<div class = "margin_top_100px">
+						<div class = "pagination" style="position: relative; z-index: 101;">
+							<li><a id="button_1" href="javascript:" style = "color:#000000; background:#5050cc"  ><h2><center>0</center></h2></a></li>
+							<li><a id="button_2" href="javascript:" style = "color:#000000; background:#7070dd" ><h2><center>1</center></h2></a></li>
+							<li><a id="button_3" href="javascript:" style = "color:#000000; background:#9090ee" ><h2><center>2</center></h2></a></li>
+							<li><a id="button_4" href="javascript:" style = "color:#000000; background:#a8a8FF" ><h2><center>3</center></h2></a></li>
+							<li><a id="button_5" href="javascript:" style = "color:#000000; background:#d0d0FF" ><h2><center>4</center></h2></a></li>
+						</div>
+					</div>
+				</div>
+			</div>
+			<button id = "button_back" class = "btn btn-warning btn-lg">Back!</button>
+			<div class="margin_top_100px"></div>
+		</div>
 	</div>
+
 </div>
 
