--- a/ShallWeEat/app/views/suggestions/_food_result.html.erb
+++ b/ShallWeEat/app/views/suggestions/_food_result.html.erb
@@ -11,15 +11,17 @@
 				<div class="page-header">
   				<h1>See Your Food!<small> Click LIKE or DISLIKE button</small></h1>
 				</div>
-			<div class="panel panel-primary">
-			  <div class="panel-heading">				
-					<h1 id = "food_name">Food name</h1>
-  			</div>
-  			<div class="panel-body">
-					<img id = "food_img" class = " center-block" width = 50% >
-  			</div>
-			</div>	
-	
+				<div class="panel panel-primary">
+					<div class="panel-heading">				
+						<h1 id = "food_name">Food name</h1>
+					</div>
+					<div class="panel-body">
+						<img id = "food_img" class = "center-block" width = 50% >
+					</div>
+				</div>
+				<div class="container">
+					<div id = "map"></div>
+				</div>
 			</div>
 		</div>
 
@@ -29,6 +31,5 @@
 			</div>
 		</div>
 	</div>
-
-	<div id = "map"></div>
+	
 </div>
