--- a/ShallWeEat/app/assets/stylesheets/suggestions.scss
+++ b/ShallWeEat/app/assets/stylesheets/suggestions.scss
@@ -21,13 +21,20 @@
 	overflow: hidden;
 	background-color: rgba(255, 255, 255, 0.35);
 	border-radius: 20px;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
 	margin-top: 100px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
+
 .item {
 	-webkit-filter: blur(10px);
 	filter: blur(10px);
+}
+
+h1 {
+	margin-top: 50px;
+	size: 200%;
 }
 
