--- a/ShallWeEat/app/views/suggestions/_question.html.erb
+++ b/ShallWeEat/app/views/suggestions/_question.html.erb
@@ -1,9 +1,11 @@
 <div id = "question_view">
 	<%= render "background" %>
+	
+	<center><h1 style="position: relative; z-index: 98; margin-top: 100px; font-size: 400%;">Shall We...Eat?</h1></center>
 
 	<div class="glass_box">
 		<div class="container">
-			<div class="col-md-6 col-md-offset-3">
+			<div class="col-md-8 col-md-offset-2">
 				<div class="margin_top_100px">
 					<div class="panel panel-primary">
 						<div class="panel-body animated bounceInRight">				
@@ -19,17 +21,21 @@
 			<div class = "row">
 				<div id = "questions_main" class = "col-md-4 col-md-offset-4">
 					<div class = "margin_top_100px">
-						<div class = "pagination" style="position: relative; z-index: 101;">
-							<li><a id="button_1" href="javascript:" style = "color:#000000; background:#5050cc"  ><h2><center>0</center></h2></a></li>
-							<li><a id="button_2" href="javascript:" style = "color:#000000; background:#7070dd" ><h2><center>1</center></h2></a></li>
-							<li><a id="button_3" href="javascript:" style = "color:#000000; background:#9090ee" ><h2><center>2</center></h2></a></li>
-							<li><a id="button_4" href="javascript:" style = "color:#000000; background:#a8a8FF" ><h2><center>3</center></h2></a></li>
-							<li><a id="button_5" href="javascript:" style = "color:#000000; background:#d0d0FF" ><h2><center>4</center></h2></a></li>
+						<div class = "pagination">
+							<li><a id="button_1" href="javascript:" style = "color:#000000; background:#9090cc"  ><h2><center>0</center></h2></a></li>
+							<li><a id="button_2" href="javascript:" style = "color:#000000; background:#a0a0dd" ><h2><center>1</center></h2></a></li>
+							<li><a id="button_3" href="javascript:" style = "color:#000000; background:#b0b0ee" ><h2><center>2</center></h2></a></li>
+							<li><a id="button_4" href="javascript:" style = "color:#000000; background:#c8c8FF" ><h2><center>3</center></h2></a></li>
+							<li><a id="button_5" href="javascript:" style = "color:#000000; background:#e0e0FF" ><h2><center>4</center></h2></a></li>
 						</div>
 					</div>
 				</div>
 			</div>
-			<button id = "button_back" class = "btn btn-warning btn-lg">Back!</button>
+			<div class="cointainer">
+				<div class="col-md-6 col-md-offset-2">
+					<button id = "button_back" class = "btn btn-warning btn-lg">Back!</button>
+				</div>
+			</div>
 			<div class="margin_top_100px"></div>
 		</div>
 	</div>
